finally found why the pre's were too large. It's corrected!

--- a/style.css
+++ b/style.css
@@ -21,7 +21,10 @@ and Blueprint http://www.blueprintcss.org/
 */
 
 
-
+pre {
+	text-shadow: none;
+	white-space: nowrap;
+}
 
 
 /* Alignment */
